# fortran-analyzer

./: .gitignore  MANIFEST.in  README.md  analyze_fortran_vars.sh  fortran_variable_analyzer.py  install.sh  install_dev.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
examples/: mod_parameters.f90  sample.f90
fortran_analyzer/: __init__.py  analyzer.py
tests/: test_analyzer.py
