[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fortran-analyzer"
dynamic = ["version"]
description = "A comprehensive tool for analyzing Fortran source code variable usage"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["fortran", "analysis", "variables", "source-code", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Fortran",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Code Generators",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.910",
]

[project.scripts]
fortran-analyzer = "fortran_analyzer:main"
fortran-variable-analyzer = "fortran_analyzer:main"

[project.urls]
Homepage = "https://github.com/yourusername/fortran-analyzer"
Repository = "https://github.com/yourusername/fortran-analyzer"
Issues = "https://github.com/yourusername/fortran-analyzer/issues"

[tool.setuptools.dynamic]
version = {attr = "fortran_analyzer.__version__"}

[tool.black]
line-length = 88
target-version = ['py36']

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
